solution stars working